# pydantic-ai-exercises

./: README.md  agent_run_async.py  agent_run_iter.py  agent_run_iter_manually.py  agent_run_stream.py  agent_run_sync.py  extract_function_parameters_from_docstrings.ipynb  function_tools.ipynb  hello_world.ipynb  pyproject.toml  simple_agent_roulette.ipynb  single_parameter_tool.ipynb  streaming_weather_agent.py  structured_output_various_models.ipynb
